// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascade Response Snapshots Create Response should match create response snapshot 1`] = `
{
  "cascade": {
    "deleted": [],
    "invalidations": [],
    "metadata": {
      "affectedCount": 1,
      "constructionTime": 0,
      "depth": 1,
      "timestamp": "NORMALIZED_TIMESTAMP",
      "trackingTime": 0,
      "transactionId": "NORMALIZED_TRANSACTION_ID",
      "truncated": false,
    },
    "typeInvalidations": [],
    "updated": [
      {
        "__typename": "User",
        "entity": {
          "__typename": "User",
          "email": "test@example.com",
          "id": "1",
          "name": "Test User",
        },
        "id": "1",
        "operation": "CREATED",
        "typename": "User",
      },
    ],
  },
  "data": {
    "id": "1",
    "name": "Test User",
  },
  "errors": [],
  "success": true,
}
`;

exports[`Cascade Response Snapshots Create Response should match multiple creates response snapshot 1`] = `
{
  "cascade": {
    "deleted": [],
    "invalidations": [],
    "metadata": {
      "affectedCount": 3,
      "constructionTime": 0,
      "depth": 1,
      "timestamp": "NORMALIZED_TIMESTAMP",
      "trackingTime": 0,
      "transactionId": "NORMALIZED_TRANSACTION_ID",
      "truncated": false,
    },
    "typeInvalidations": [],
    "updated": [
      {
        "__typename": "User",
        "entity": {
          "__typename": "User",
          "id": "1",
          "name": "User 1",
        },
        "id": "1",
        "operation": "CREATED",
        "typename": "User",
      },
      {
        "__typename": "Post",
        "entity": {
          "__typename": "Post",
          "authorId": "1",
          "id": "101",
          "title": "Post 1",
        },
        "id": "101",
        "operation": "CREATED",
        "typename": "Post",
      },
      {
        "__typename": "Comment",
        "entity": {
          "__typename": "Comment",
          "id": "1001",
          "postId": "101",
          "text": "Comment",
        },
        "id": "1001",
        "operation": "CREATED",
        "typename": "Comment",
      },
    ],
  },
  "data": null,
  "errors": [],
  "success": true,
}
`;

exports[`Cascade Response Snapshots Delete Response should match delete response snapshot 1`] = `
{
  "cascade": {
    "deleted": [
      {
        "__typename": "User",
        "deletedAt": "NORMALIZED_DELETED_AT",
        "id": "1",
        "typename": "User",
      },
    ],
    "invalidations": [],
    "metadata": {
      "affectedCount": 1,
      "constructionTime": 0,
      "depth": 0,
      "timestamp": "NORMALIZED_TIMESTAMP",
      "trackingTime": 0,
      "transactionId": "NORMALIZED_TRANSACTION_ID",
      "truncated": false,
    },
    "typeInvalidations": [],
    "updated": [],
  },
  "data": {
    "deleted": true,
  },
  "errors": [],
  "success": true,
}
`;

exports[`Cascade Response Snapshots Delete Response should match multiple deletes response snapshot 1`] = `
{
  "cascade": {
    "deleted": [
      {
        "__typename": "Post",
        "deletedAt": "NORMALIZED_DELETED_AT",
        "id": "101",
        "typename": "Post",
      },
      {
        "__typename": "Post",
        "deletedAt": "NORMALIZED_DELETED_AT",
        "id": "102",
        "typename": "Post",
      },
      {
        "__typename": "Comment",
        "deletedAt": "NORMALIZED_DELETED_AT",
        "id": "1001",
        "typename": "Comment",
      },
    ],
    "invalidations": [],
    "metadata": {
      "affectedCount": 3,
      "constructionTime": 0,
      "depth": 0,
      "timestamp": "NORMALIZED_TIMESTAMP",
      "trackingTime": 0,
      "transactionId": "NORMALIZED_TRANSACTION_ID",
      "truncated": false,
    },
    "typeInvalidations": [],
    "updated": [],
  },
  "data": {
    "deletedCount": 3,
  },
  "errors": [],
  "success": true,
}
`;

exports[`Cascade Response Snapshots Empty Response should match empty cascade response snapshot 1`] = `
{
  "cascade": {
    "deleted": [],
    "invalidations": [],
    "metadata": {
      "affectedCount": 0,
      "constructionTime": 0,
      "depth": 0,
      "timestamp": "NORMALIZED_TIMESTAMP",
      "trackingTime": 0,
      "transactionId": "NORMALIZED_TRANSACTION_ID",
      "truncated": false,
    },
    "typeInvalidations": [],
    "updated": [],
  },
  "data": null,
  "errors": [],
  "success": true,
}
`;

exports[`Cascade Response Snapshots Error Response should match error response snapshot 1`] = `
{
  "cascade": {
    "deleted": [],
    "invalidations": [],
    "metadata": {
      "affectedCount": 0,
      "constructionTime": 0,
      "depth": 0,
      "timestamp": "NORMALIZED_TIMESTAMP",
      "trackingTime": 0,
      "transactionId": "NORMALIZED_TRANSACTION_ID",
      "truncated": false,
    },
    "typeInvalidations": [],
    "updated": [],
  },
  "data": null,
  "errors": [
    {
      "code": "VALIDATION_ERROR",
      "field": "email",
      "message": "Validation failed",
    },
  ],
  "success": false,
}
`;

exports[`Cascade Response Snapshots Error Response should match multiple errors response snapshot 1`] = `
{
  "cascade": {
    "deleted": [],
    "invalidations": [],
    "metadata": {
      "affectedCount": 0,
      "constructionTime": 0,
      "depth": 0,
      "timestamp": "NORMALIZED_TIMESTAMP",
      "trackingTime": 0,
      "transactionId": "NORMALIZED_TRANSACTION_ID",
      "truncated": false,
    },
    "typeInvalidations": [],
    "updated": [],
  },
  "data": null,
  "errors": [
    {
      "code": "VALIDATION_ERROR",
      "field": "email",
      "message": "Email is required",
    },
    {
      "code": "VALIDATION_ERROR",
      "field": "name",
      "message": "Name is too short",
    },
  ],
  "success": false,
}
`;

exports[`Cascade Response Snapshots Mixed Operations Response should match mixed operations response snapshot 1`] = `
{
  "cascade": {
    "deleted": [
      {
        "__typename": "Post",
        "deletedAt": "NORMALIZED_DELETED_AT",
        "id": "100",
        "typename": "Post",
      },
    ],
    "invalidations": [],
    "metadata": {
      "affectedCount": 3,
      "constructionTime": 0,
      "depth": 1,
      "timestamp": "NORMALIZED_TIMESTAMP",
      "trackingTime": 0,
      "transactionId": "NORMALIZED_TRANSACTION_ID",
      "truncated": false,
    },
    "typeInvalidations": [],
    "updated": [
      {
        "__typename": "User",
        "entity": {
          "__typename": "User",
          "id": "2",
          "name": "New User",
        },
        "id": "2",
        "operation": "CREATED",
        "typename": "User",
      },
      {
        "__typename": "User",
        "entity": {
          "__typename": "User",
          "id": "1",
          "name": "Updated User",
        },
        "id": "1",
        "operation": "UPDATED",
        "typename": "User",
      },
    ],
  },
  "data": null,
  "errors": [],
  "success": true,
}
`;

exports[`Cascade Response Snapshots Streaming Response should match streaming response snapshot 1`] = `
{
  "cascade": {
    "deleted": [],
    "invalidations": [],
    "metadata": {
      "affectedCount": 2,
      "constructionTime": 0,
      "depth": 0,
      "streaming": true,
      "timestamp": "NORMALIZED_TIMESTAMP",
      "trackingTime": 0,
      "transactionId": "NORMALIZED_TRANSACTION_ID",
      "truncated": false,
    },
    "typeInvalidations": [],
    "updated": [
      {
        "__typename": "User",
        "entity": {
          "id": "1",
          "name": "User 1",
        },
        "id": "1",
        "operation": "CREATED",
        "typename": "User",
      },
      {
        "__typename": "Post",
        "entity": {
          "id": "101",
          "title": "Post 1",
        },
        "id": "101",
        "operation": "CREATED",
        "typename": "Post",
      },
    ],
  },
  "data": {
    "id": "1",
  },
  "errors": [],
  "success": true,
}
`;

exports[`Cascade Response Snapshots Truncated Response should match truncated response snapshot 1`] = `
{
  "cascade": {
    "deleted": [],
    "invalidations": [],
    "metadata": {
      "affectedCount": 10,
      "constructionTime": 0,
      "depth": 0,
      "timestamp": "NORMALIZED_TIMESTAMP",
      "trackingTime": 0,
      "transactionId": "NORMALIZED_TRANSACTION_ID",
      "truncated": true,
    },
    "typeInvalidations": [
      {
        "affectedCount": 10,
        "typename": "User",
      },
    ],
    "updated": [],
  },
  "data": null,
  "errors": [],
  "success": true,
}
`;

exports[`Cascade Response Snapshots Update Response should match update response snapshot 1`] = `
{
  "cascade": {
    "deleted": [],
    "invalidations": [],
    "metadata": {
      "affectedCount": 1,
      "constructionTime": 0,
      "depth": 1,
      "timestamp": "NORMALIZED_TIMESTAMP",
      "trackingTime": 0,
      "transactionId": "NORMALIZED_TRANSACTION_ID",
      "truncated": false,
    },
    "typeInvalidations": [],
    "updated": [
      {
        "__typename": "User",
        "entity": {
          "__typename": "User",
          "email": "updated@example.com",
          "id": "1",
          "name": "Updated Name",
        },
        "id": "1",
        "operation": "UPDATED",
        "typename": "User",
      },
    ],
  },
  "data": {
    "id": "1",
    "name": "Updated Name",
  },
  "errors": [],
  "success": true,
}
`;
